
[metadata]
license = AGPLv3
description = The simplest peer to peer networking Python library
long_description = file:README.md
long_description_content_type = text/markdown
platform = all
keywords =
  p2p
  peer to peer
  ipds
classifiers =
  Development Status :: 3 - Alpha
  Topic :: Software Development :: Build Tools
  License :: OSI Approved :: GNU Affero General Public License v3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: System :: Networking

[options]
install_requires =
  colorlog
